--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,6 +8,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="/env.js" type="text/javascript" defer></script>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
